force-app/main/default/objects/Quote/fields/fm_AverageProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>fm_AverageProfitMargin__c</fullName>
    <description>(총 견적가 - 총 기준매입가) / 총 기준매입가</description>
    <formula>(ru_TotalUnitPrice__c -  ru_TotalBasePurchasePrice__c ) /  ru_TotalBasePurchasePrice__c</formula>
    <label>Average Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>