force-app/main/default/objects/Quote/fields/fm_AverageVATRate__c.field-meta.xml
<CustomField>
    <fullName>fm_AverageVATRate__c</fullName>
    <description>(총 VAT 포함가 - 총 견적가) / 총 견적가</description>
    <formula>( ru_TotalPriceWithVAT__c -  ru_TotalUnitPrice__c ) /  ru_TotalUnitPrice__c</formula>
    <label>Average Vat Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>