force-app/main/default/objects/Quote/fields/fm_EffectivePeriod__c.field-meta.xml
<CustomField>
    <fullName>fm_EffectivePeriod__c</fullName>
    <formula>IF ( ISNULL(EffectiveStartDate__c) = True  || ISNULL(ExpirationDate) = True , &quot; &quot; , Text(EffectiveStartDate__c)&amp; &quot; &quot; &amp; &quot; - &quot; &amp; &quot; &quot; &amp; Text(ExpirationDate))</formula>
    <label>Effective Period</label>
    <type>Text</type>
</CustomField>