force-app/main/default/objects/Quote/fields/OriginalQuote__c.field-meta.xml
<CustomField>
    <fullName>OriginalQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OriginalQuote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>