force-app/main/default/objects/Quote/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PriceBook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>