force-app/main/default/objects/Quote/fields/ru_TotalBasePurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalBasePurchasePrice__c</fullName>
    <description>총 기준 매입가</description>
    <label>Total Base Purchase Price</label>
    <summarizedField>QuoteLineItem.BasePurchasePrice__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>