force-app/main/default/objects/Quote/fields/ru_TotalPriceWithVAT__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalPriceWithVAT__c</fullName>
    <description>총 VAT 포함가</description>
    <label>Total Price with VAT</label>
    <summarizedField>QuoteLineItem.UnitPriceWithVAT__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>