force-app/main/default/objects/Quote/fields/ru_TotalUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalUnitPrice__c</fullName>
    <description>총 견적가</description>
    <label>Total UnitPice</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>