force-app/main/default/objects/Quote/validationRules/EffectiveDateValidationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>EffectiveDateValidationCheck</fullName>
    <active>true</active>
    <description>견적 만료일자가 시작일자보다 빠를 경우 ValidationCheck</description>
    <errorConditionFormula>EffectiveStartDate__c &gt; ExpirationDate</errorConditionFormula>
    <errorMessage>만료 일자를 시작 일자 이후로 설정해주세요.</errorMessage>
</ValidationRule>